# TechTasks

./: .gitignore  Base.code-profile  Chem.code-profile  PDF_Reader.ipynb  Start.py  Test1.py  add3  addition.txt  pyproject.toml  recognizer.ipynb  start.ipynb  test.ipynb  test.py
Client-server/: client.py  server.py
Task3/: Demonstration.1.ipynb  Demonstration.ipynb  Old2.ipynb  Recognizer.ipynb
Task5/: client.py  recogniser.py  recognizer.py  server.py
