[tool.black]
line-length = 100
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | _env
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "techtasks"
version = "0.1.0"
description = "Solves for Agat tasks"
authors = ["STRANGER <kraynoff.i@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.1"
opencv-python = "^4.10.0.84"
pyqt6 = "^6.7.1"
pyaspeller = "^2.0.0"
pytesseract = "^0.3.10"
wave = "^0.0.2"
librosa = "^0.10.2.post1"
noisereduce = "^3.0.2"
vosk = "^0.3.45"
numpy = "<2.0"
pyaudio = "^0.2.14"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
